cambios principales bd

--- a/SAS/04-Common/Model/Model.csproj
+++ b/SAS/04-Common/Model/Model.csproj
@@ -63,23 +63,25 @@
     <Compile Include="Auth\ApplicationUserRole.cs" />
     <Compile Include="Custom\UserForGridView.cs" />
     <Compile Include="Custom\CategoryForGridView.cs" />
-    <Compile Include="Domain\AccesoSistema.cs" />
-    <Compile Include="Domain\AccesoSistemaRol.cs" />
-    <Compile Include="Domain\Beneficiario.cs" />
-    <Compile Include="Domain\Canalizacion.cs" />
-    <Compile Include="Domain\Contacto.cs" />
-    <Compile Include="Domain\Departamento.cs" />
-    <Compile Include="Domain\DetCanalizacion.cs" />
-    <Compile Include="Domain\Documentos.cs" />
-    <Compile Include="Domain\Escuela.cs" />
-    <Compile Include="Domain\Institucion.cs" />
-    <Compile Include="Domain\Localidad.cs" />
-    <Compile Include="Domain\Municipio.cs" />
-    <Compile Include="Domain\NivelEducativo.cs" />
-    <Compile Include="Domain\Procedencia.cs" />
-    <Compile Include="Domain\Solicitud.cs" />
-    <Compile Include="Domain\TipoAsunto.cs" />
-    <Compile Include="Domain\TipoProcedencia.cs" />
+    <Compile Include="Domain\Beneficiary.cs" />
+    <Compile Include="Domain\Department.cs" />
+    <Compile Include="Domain\DetailRecord.cs" />
+    <Compile Include="Domain\Document.cs" />
+    <Compile Include="Domain\EducationLevel.cs" />
+    <Compile Include="Domain\Institution.cs" />
+    <Compile Include="Domain\Provenance.cs" />
+    <Compile Include="Domain\Record.cs" />
+    <Compile Include="Domain\College.cs" />
+    <Compile Include="Domain\Contact.cs" />
+    <Compile Include="Domain\Locality.cs" />
+    <Compile Include="Domain\Requirements.cs" />
+    <Compile Include="Domain\Solicitude.cs" />
+    <Compile Include="Domain\SystemAccess.cs" />
+    <Compile Include="Domain\SystemAccessRoles.cs" />
+    <Compile Include="Domain\Township.cs" />
+    <Compile Include="Domain\TypeOrigin.cs" />
+    <Compile Include="Domain\TypeSubject.cs" />
+    <Compile Include="Domain\Validation.cs" />
     <Compile Include="Helper\AuditEntity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
