--- a/SAS/01-FrontEnd/Config/app.connections.config
+++ b/SAS/01-FrontEnd/Config/app.connections.config
@@ -1,3 +1,3 @@
 ﻿<connectionStrings>
-  <add name="AppContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=SAS_v1;Persist Security Info=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+  <add name="AppContext" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=AtencionSolicitudes;Persist Security Info=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
 </connectionStrings>
