--- a/SAS/03-Persistence/Persistence.DatabaseContext/Persistence.DatabaseContext.csproj
+++ b/SAS/03-Persistence/Persistence.DatabaseContext/Persistence.DatabaseContext.csproj
@@ -68,9 +68,21 @@
     <Compile Include="Migrations\201706280313338_Initialize.Designer.cs">
       <DependentUpon>201706280313338_Initialize.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201708030126457_sprint-v1.0.cs" />
-    <Compile Include="Migrations\201708030126457_sprint-v1.0.Designer.cs">
-      <DependentUpon>201708030126457_sprint-v1.0.cs</DependentUpon>
+    <Compile Include="Migrations\201708050411598_sprint-v1.0.0.cs" />
+    <Compile Include="Migrations\201708050411598_sprint-v1.0.0.Designer.cs">
+      <DependentUpon>201708050411598_sprint-v1.0.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708050630501_sprint-v1.1.0.cs" />
+    <Compile Include="Migrations\201708050630501_sprint-v1.1.0.Designer.cs">
+      <DependentUpon>201708050630501_sprint-v1.1.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708050810244_sprint-v1.2.0.cs" />
+    <Compile Include="Migrations\201708050810244_sprint-v1.2.0.Designer.cs">
+      <DependentUpon>201708050810244_sprint-v1.2.0.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708051935501_sprint-v1.2.1.cs" />
+    <Compile Include="Migrations\201708051935501_sprint-v1.2.1.Designer.cs">
+      <DependentUpon>201708051935501_sprint-v1.2.1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -95,8 +107,17 @@
     <EmbeddedResource Include="Migrations\201706280313338_Initialize.resx">
       <DependentUpon>201706280313338_Initialize.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201708030126457_sprint-v1.0.resx">
-      <DependentUpon>201708030126457_sprint-v1.0.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201708050411598_sprint-v1.0.0.resx">
+      <DependentUpon>201708050411598_sprint-v1.0.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708050630501_sprint-v1.1.0.resx">
+      <DependentUpon>201708050630501_sprint-v1.1.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708050810244_sprint-v1.2.0.resx">
+      <DependentUpon>201708050810244_sprint-v1.2.0.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708051935501_sprint-v1.2.1.resx">
+      <DependentUpon>201708051935501_sprint-v1.2.1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
